--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4382,6 +4382,7 @@ h2.on .lang, .propCollapseHeader .lang, .propCollapse .lang { position:absolute 
 .placeMap {  width:400px;height:400px;overflow:hidden; }
 .placeMap.large { width:100%;height:90vh; }
 .leaflet-tooltip { padding:15px;}
+.leaflet-tooltip.GIS { padding:7px; -webkit-user-select: auto;  user-select: auto; pointer-events: auto;}
 .leaflet-tooltip h2 {  font-size:16px; padding-bottom:0;margin:0 !important;margin-bottom:5px !important;}
 .leaflet-tooltip h2 svg { display:none;}
 .placeMap .leaflet-bottom .leaflet-control { margin:0 !important;background: rgba(255, 255, 255, 0.7);}
@@ -4389,6 +4390,29 @@ h2.on .lang, .propCollapseHeader .lang, .propCollapse .lang { position:absolute 
 .placeMap .leaflet-bottom > .leaflet-control > .leaflet-control { background:none; }
 .placeMap .leaflet-bottom.leaflet-right { margin-bottom:0px !important; }
 .placeMap:not(.large) .leaflet-control { font-size:11px !important; }
+
+#map .map { position: relative;}
+
+.placeMap + .accu { 
+   text-align: center;
+   top:10px;
+   position: absolute;
+   width:100%;
+   z-index:1000;
+}
+
+.placeMap + .accu > span {
+   background:white;
+   border: 1px solid #fff;
+   border-radius: 3px;
+   color: #222;
+   box-shadow: 0 1px 3px rgb(0,0,0,0.4);
+   display: inline-block;
+   font-size:12px;
+   text-align: center;
+   width:80%;
+   padding:3px;
+}
 
 .placeMap .gmnoprint { display:none;}
 .gm-style > iframe + div {  margin-bottom:20px; }
