css fix for Browse link in placeContains when < 4 places

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4230,18 +4230,22 @@ h3 .expand svg { position:absolute; margin-top:-18px; }*/
 .resource .data :is(.withLinkTo,[data-prop="bdo:workHasInstance"]) .propCollapseHeader.in-false { margin-bottom:30px;}
 .resource .data :is(.withLinkTo,[data-prop="bdo:workHasInstance"]) .propCollapseHeader .expand { position:absolute;left:0;bottom:-30px;top:auto;}
 
+.resource .data :is(.withLinkTo,[data-prop="bdo:workHasInstance"]) .expand.linkToPlaces,
 .resource .data :is(.withLinkTo,[data-prop="bdo:workHasInstance"]) .expand.linkToVersions,
 .resource .data :is(.withLinkTo,[data-prop="bdo:workHasInstance"]) .expand + .expand { right:0; left:auto; text-align: right; position: absolute; bottom:-25px; border:none; cursor:auto;}
 
+.resource .data .withLinkTo .expand.linkToPlaces,
 .resource .data .withLinkTo .expand.linkToVersions,
 .resource .data .withLinkTo .expand + .expand { bottom:-20px; }
 
+.resource .data :is(.withLinkTo,[data-prop="bdo:workHasInstance"]) .expand.linkToPlaces a,
 .resource .data :is(.withLinkTo,[data-prop="bdo:workHasInstance"]) .expand.linkToVersions a,
 .resource .data :is(.withLinkTo,[data-prop="bdo:workHasInstance"]) .expand + .expand a { color:white; background-color: #d73449; font-weight: 500; padding:10px 15px; border-radius: 5px; border:none;}
 
 .resource .data .withLinkTo .propCollapse + .expand + .expand { bottom:60px; }
 .resource .data [data-prop="bdo:workHasInstance"] .propCollapse + .expand + .expand { bottom:22px; }
 
+.resource .data :is(.withLinkTo,[data-prop="bdo:workHasInstance"]) .group + .expand.linkToPlaces:last-child,
 .resource .data :is(.withLinkTo,[data-prop="bdo:workHasInstance"]) .group + .expand.linkToVersions:last-child { position: relative; margin-bottom: 30px; width:100%; margin-top:-22px;}
 
 .resource .data :is(.withLinkTo,[data-prop="bdo:workHasInstance"]) span.in { margin-left:0;  }
