--- a/src/components/App.css
+++ b/src/components/App.css
@@ -5,6 +5,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300&display=swap');
 
 
+@import url('//fonts.googleapis.com/css2?family=Noto+Sans+Mongolian&display=swap');
+
 @import url('//fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap');
 
 @import url('//fonts.googleapis.com/css2?family=Noto+Serif+Khmer:wght@400;700;900&display=swap');
@@ -146,7 +148,7 @@ footer#site-footer.no-syncs > div.head::before { background-color:#efefef; }
 
 [role='tooltip'] *, .App *,.nav *,.App *::before,.App *::after, .react-tabs *, .resource *:not(.fa):not(.material-icons), .resource + * *,
 .inRes *, #popDL.cite *, #menu-citationLang * { 
-   font-family:"Noto Sans", "Noto Serif Khmer", "Roboto", "Helvetica", "Arial", sans-serif !important;
+   font-family:"Noto Sans", "Noto Serif Khmer", "Noto Sans Mongolian", "Roboto", "Helvetica", "Arial", sans-serif !important;
 }
 
 .SearchPane { width:1000px; margin:auto;margin-top:80px;max-width:90%; z-index:0;background:white;padding:50px; padding-bottom:0;
@@ -423,7 +425,7 @@ body { overflow:auto !important;padding-right:0 !important; /*font-family:"Robot
 /* --------------------------------------------------------------------------------------------------------------------- topbar */
 
 .nav { width:100%; height:80px; position:fixed;top:0;left:0;background:white; display:flex;align-items: center; justify-content: center;
-   box-shadow: 0 2px 4px rgba(187, 187, 187, 0.5); z-index:10010; 
+   box-shadow: 0 2px 4px rgba(187, 187, 187, 0.5); z-index:100010; 
 }
 
 .nav #back,.nav #back h2 span { 
@@ -3879,7 +3881,7 @@ html[lang="en"] .resource .data > [data-prop="bdo:creator"] h4[data-prop="bdo:ro
    width: 100%;
    height: 80px;
    background: #172832;
-   z-index: 10001;
+   z-index: 100001;
    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.5);
    display: flex;
    align-items: center;
