--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2334,6 +2334,8 @@ h4:not(:hover) > .lang
 .resource.user .data#outline .help { font-size:14px; margin-bottom:24px; margin-top:8px; font-weight:400;padding-left:2px;}
 
 
+.resource.user .data#outline .help + .widget > label > span:last-child { max-width: calc(100% - 190px - 20px); display: block; }  */
+
 .resource .data#outline .provider { padding-right:10px;  }
 .resource .data#outline .provider img { height:14px; vertical-align: -2px !important; cursor:pointer;}
 
