--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2020,6 +2020,8 @@ h4:not(:hover) > .lang
 .resource .data#outline { background-color: #ffffff; padding: 35px; padding-bottom: 0; padding-top:45px; }
 .resource .data#outline > h2 { margin-left:35px; margin-bottom:35px; }
 .resource .data#outline > div { background-color: #fcf5e2; padding: 25px 35px; }
+.resource .data#outline > div.loader { background-color: transparent; padding: 0;  }
+
 .resource .data#outline > .search { background-color: #fce08d; justify-content:center; padding:20px; position:relative; }
 .resource .data#outline > .search > div { display:inline-block; position: relative;}
 .resource .data#outline > .search::after { content:none !important; }
